fix: fix shift due to vertical scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,7 @@
 html {
     box-sizing: border-box;
+    overflow-y: scroll;
 }
-/*Убираем смещение экрана при появлении вертикального skroll-bar*/
-@media screen and (min-width: 960px) {
-    html {
-        margin-left: calc(100vw - 100%);
-        margin-right: 0;
-    }
-}
-
 *, *:before, *:after {
     box-sizing: inherit;
 }
